Change in api response and docs
